# FFmpeg

./: .gitignore  CMakeLists.txt  build_lib.md  config.asm  config.h  config_components.h
ffbuild/: .gitignore  config.fate  config.mak  config.sh
lib/x64/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  swresample.lib  swscale.lib
libavcodec/: .gitignore  bsf_list.c  codec_list.c
libavdevice/: .gitignore
libavfilter/: .gitignore  filter_list.c
libavformat/: .gitignore  protocol_list.c
libavutil/: .gitignore  ffversion.h
